--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "01",
   "version": "0.1.0",
+  "homepage": "https://{username}.github.io/{nome-do-repositorio}",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -10,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
