--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "01",
   "version": "0.1.0",
-  "homepage": "https://{username}.github.io/{nome-do-repositorio}",
+  "homepage": "https://natansalgado.github.io/crow",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -21,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
